--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint ./"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bluebird": "^3.3.4",
     "cron": "^1.1.0",
     "request": "^2.70.0",
